--- a/IoTAssignment/app/src/main/res/values/strings.xml
+++ b/IoTAssignment/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="smart_agriculture">Smart Agriculture</string>
     <string name="smart_building">Smart Building</string>
     <string name="title_activity_tt">tt</string>
+    <string name= "image">image</string>
 </resources>
