--- a/IoTAssignment/app/src/main/res/values/strings.xml
+++ b/IoTAssignment/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="smart_building">Smart Building</string>
     <string name="title_activity_tt">tt</string>
     <string name="in_ground_sensor">In-ground sensor</string>
+    <string name="parking_sensor">Parking Sensor</string>
 </resources>
