--- a/IoTAssignment/app/src/main/res/values/strings.xml
+++ b/IoTAssignment/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="title_activity_tt">tt</string>
     <string name="in_ground_sensor">In-ground sensor</string>
     <string name="parking_sensor">Parking Sensor</string>
+    <string name="proximity_sensor">Proximity Sensor</string>
+    <string name="smart_lighting">Smart Lighting</string>
 </resources>
