--- a/IoTAssignment/app/src/main/res/values/strings.xml
+++ b/IoTAssignment/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="parking_sensor">Parking Sensor</string>
     <string name="proximity_sensor">Proximity Sensor</string>
     <string name="smart_lighting">Smart Lighting</string>
+    <string name="cctv">CCTV</string>
+    <string name="CCTV">TODO</string>
+    <string name="SmartDoor">TODO</string>
 </resources>
