--- a/IoTAssignment/app/src/main/res/values/strings.xml
+++ b/IoTAssignment/app/src/main/res/values/strings.xml
@@ -36,4 +36,9 @@
     <string name="_0">0</string>
     <string name="_7m">/7m</string>
     <string name="accumulated_number">Accumulated number:</string>
+    \
+    <string name="totalMax">/60cm</string>
+    <string name="tc_cmDetection">0</string>
+    <string name="slot_status">TODO</string>
+    <string name="SplashScreen">TODO</string>
 </resources>
